# ai-maths-llms

./: .gitignore  README.md  pyproject.toml
notebooks/: hands_on_conjecture_engine.ipynb
notebooks/full_workshop/openai/: openai.ipynb
notebooks/full_workshop/prompting/: prompting.ipynb  prompting_exercise.ipynb
notebooks/full_workshop/tools/: tools.ipynb
notebooks/openai/: openai.ipynb
notebooks/pptx/: setup.pptx
notebooks/prompting/: prompt_templates.ipynb  prompting_exercise.ipynb
notebooks/utils/: _utils.py
